--- a/index.html
+++ b/index.html
@@ -2,10 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Bahauddin Chishte - Tech Entrepreneur & Developer</title>
+    <meta name="title" content="Bahauddin Chishte - Tech Entrepreneur & Developer" />
+    <meta name="description" content="Tech entrepreneur passionate about solving problems with technology. Experienced in SaaS, product development, marketing, and business development." />
+    <meta name="keywords" content="tech entrepreneur, software developer, SaaS, product development, business development, programming, web development, Bahauddin Chishte" />
+    <meta name="author" content="Bahauddin Chishte" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://bahauddinchishte.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bahauddinchishte.com" />
+    <meta property="og:title" content="Bahauddin Chishte - Tech Entrepreneur & Developer" />
+    <meta property="og:description" content="Tech entrepreneur passionate about solving problems with technology. Experienced in SaaS, product development, marketing, and business development." />
+    <meta property="og:image" content="https://live.staticflickr.com/65535/54241877452_39dc62951f_k.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Bahauddin Chishte" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://bahauddinchishte.com" />
+    <meta name="twitter:title" content="Bahauddin Chishte - Tech Entrepreneur & Developer" />
+    <meta name="twitter:description" content="Tech entrepreneur passionate about solving problems with technology. Experienced in SaaS, product development, marketing, and business development." />
+    <meta name="twitter:image" content="https://live.staticflickr.com/65535/54241877452_39dc62951f_k.jpg" />
+    <meta name="twitter:site" content="@bahauddin_ai" />
+    <meta name="twitter:creator" content="@bahauddin_ai" />
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Bahauddin Chishte</title>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Bahauddin Chishte",
+      "url": "https://bahauddinchishte.com",
+      "image": "https://live.staticflickr.com/65535/54241877452_39dc62951f_k.jpg",
+      "jobTitle": "Tech Entrepreneur",
+      "description": "Tech entrepreneur passionate about solving problems with technology. Experienced in SaaS, product development, marketing, and business development.",
+      "email": "bahauddin.chishte@gmail.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/bahauddin-chishte/",
+        "https://x.com/bahauddin_ai",
+        "https://github.com"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
